# skboost

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
scripts/: Softmax Plots.ipynb  Training MUSK.ipynb  run_gentleboost.py  run_logitboost.py  run_milboost.py
skboost/: __init__.py  gentleboost.py  logitboost.py  optimizers.py  version.py
skboost/datasets/: __init__.py
skboost/datasets/hastie/: __init__.py
skboost/datasets/musk/: __init__.py
skboost/milboost/: __init__.py  classifier.py
skboost/milboost/softmax/: __init__.py  base.py  gm.py  isr.py  lse.py  nor.py
skboost/stumps/: __init__.py  decision_stump.py  regression_stump.py
skboost/stumps/ext/src/: classifiers.c
tests/: test_gentleboost.py  test_logitboost.py  test_milboost.py  test_softmax.py
