[metadata]
name = skboost
version = attr: skboost.version.__version__
author = Henrik Blidh
author_email = henrik.blidh@nedomkull.com
description = Boosting Algorithms compatible with scikit-learn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hbldh/skboost
license = MIT
keywords = Machine Learning, Boosting
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    scipy
    scikit-learn
    psutil

[options.packages.find]
exclude =
    tests
    scripts

[options.package_data]
skboost.stumps.ext = src/*
skboost.datasets.musk = clean*.*

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov

[options.entry_points]
#console_scripts =
# Add any console scripts here

[build_ext]
inplace = 1

[extension:classifiers]
sources = skboost/stumps/ext/src/classifiers.c
include_dirs = numpy.get_include(), skboost/stumps/ext/src/